pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    pvc: "true"
  name: hello-pod
spec:
  containers:
  - name: ubuntu
    image: ubuntu:18.04
    command: ['tail', '-f', '/dev/null']
