admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "pod-policy.example.com"
webhooks:
- name: "pod-policy.example.com"
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: "hdac"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNuRENDQVlRQ0NRQ0t1SnJWYVFNcXNUQU5CZ2txaGtpRzl3MEJBUXNGQURBUU1RNHdEQVlEVlFRRERBVnQKZVMxallUQWVGdzB5TVRFeU1UQXhOVFF5TURGYUZ3MHlNakV5TVRBeE5UUXlNREZhTUJBeERqQU1CZ05WQkFNTQpCVzE1TFdOaE1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBdEdHWGhGM0h3TnlTCm4yck90UXFrQ09tLzZvZzlZNEtsUmJoenBudENJa0lxNWs5RXZQa0FFcy90RVEyaU1abTlHK2tZNmh2YzZERkwKcktCVC9hMDdGM25tZ0tVemx6eXBMdXgrQ2RmbGtCUXRETXZaVXNnT1VYdzFWT3B2SFZYb0ZhUmczSGxvNXpxcwpRTkJHVEZmT1JZS [...]
  admissionReviewVersions: ["v1"]
  sideEffects: NoneOnDryRun
  timeoutSeconds: 5
